--- a/frontend/src/components/Nav/NotificationModal.css
+++ b/frontend/src/components/Nav/NotificationModal.css
@@ -1,9 +1,9 @@
 .bg-custom {
-    background-color: #ffd5db !important;
+    background-color: #fdf5e6 !important;
 }
 
 .notification-modal .bg-custom {
-    background-color: #ffd5db !important;
+    background-color: #fdf5e6 !important;
 }
 
 .notification-modal .modal-content {
