--- a/frontend/src/styles/ForgotPassword.css
+++ b/frontend/src/styles/ForgotPassword.css
@@ -1,5 +1,5 @@
 .forgot-password-container {
-    max-width: 400px!important;
+    max-width: 400px !important;
     margin: 40px auto;
     padding: 0 15px;
 }
@@ -9,10 +9,10 @@
 } */
 
 .form-control:focus {
-    border-color: #ffc0cb;
+    border-color: #8B4513;
     box-shadow: none;
 }
 
 .btn:hover {
-    background-color: #ffb6c1 !important;
+    background-color: #8B4513 !important;
 }
