--- a/frontend/src/components/Carousel/ChatButtons.css
+++ b/frontend/src/components/Carousel/ChatButtons.css
@@ -1,12 +1,11 @@
 .chat-toggle-container {
     position: fixed;
     bottom: 86px;
-    /* Khoảng cách từ dưới trang */
     right: 26px;
-    /* Khoảng cách từ bên phải */
     z-index: 1000;
     display: flex;
     align-items: center;
+    color: #8B4513;
 }
 
 .chat-main-button {
@@ -17,24 +16,24 @@
 
 .chat-main-icon {
     width: 50px;
-    /* Kích thước icon chat chính */
     object-fit: contain;
+    filter: drop-shadow(0 0 2px #8B4513);
 }
 
-/* Menu chứa 2 icon được hiển thị theo hàng ngang */
 .chat-menu {
     display: flex;
     flex-direction: row;
- 
-    /* Khoảng cách giữa menu và icon chat chính */
 }
 
 .chat-menu-item {
     width: 70px;
-    /* Kích thước 100px cho icon Zalo và Facebook */
     display: flex;
     align-items: center;
     justify-content: center;
+    background-color: #fdf5e6;
+    border: 1px solid #8B4513;
+    border-radius: 5px;
+    margin-left: 5px;
 }
 
 .chat-menu-icon {
