--- a/frontend/src/styles/AccountList.css
+++ b/frontend/src/styles/AccountList.css
@@ -34,7 +34,7 @@
     width: 50px;
     height: 50px;
     border: 6px solid #f3f3f3;
-    border-top: 6px solid #FF6F91;
+    border-top: 6px solid #8B4513;
     border-radius: 50%;
     animation: spin 0.5s linear infinite;
 }
