--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -3,22 +3,23 @@
 * {
     margin: 0;
     padding: 0;
-font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-
-
 
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #f3f3f3;
-    font-size: 13px!important;
+    font-size: 13px !important;
 }
-.container{
+
+.container {
     font-size: 13px;
-            /* max-width: 1200px!important; */
+    /* max-width: 1200px!important; */
 }
+
 .navbar {
-font-size: 13px;}
+    font-size: 13px;
+}
 
 .loading-container {
     position: fixed;
@@ -39,7 +40,7 @@ font-size: 13px;}
     width: 50px;
     height: 50px;
     border: 6px solid #f3f3f3;
-    border-top: 6px solid #FF6F91;
+    border-top: 6px solid #8B4513;
     border-radius: 50%;
     animation: spin 0.5s linear infinite;
 }
