--- a/frontend/src/styles/Login.css
+++ b/frontend/src/styles/Login.css
@@ -1,5 +1,5 @@
 .login-container {
-    max-width: 400px!important;
+    max-width: 400px !important;
     margin: 48px auto;
     padding: 0 16px;
 }
@@ -21,14 +21,14 @@
 .login-button {
     width: 100%;
     padding: 12px;
-    background-color: #ffc0cb !important;
+    background-color: #8B4513 !important;
     border: none !important;
     border-radius: 25px !important;
     font-weight: 500;
 }
 
 .login-button:hover {
-    background-color: #ffb6c1 !important;
+    background-color: #8B4513 !important;
 }
 
 .forgot-password a {
@@ -49,8 +49,8 @@
 } */
 
 .form-control:focus {
-    border-color: #ffc0cb;
-    box-shadow: 0 0 0 0.2rem rgba(255, 192, 203, 0.25);
+    border-color: #8B4513;
+    box-shadow: 0 0 0 0.2rem rgba(139, 69, 19, 0.25);
 }
 
 .loading-container {
@@ -72,7 +72,7 @@
     width: 50px;
     height: 50px;
     border: 6px solid #f3f3f3;
-    border-top: 6px solid #FF6F91;
+    border-top: 6px solid #8B4513;
     border-radius: 50%;
     animation: spin 10s linear infinite;
 }
