--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -1,5 +1,3 @@
-
-
 .notification-badge,
 .cart-badge {
     position: absolute;
@@ -25,17 +23,17 @@
     height: 100%;
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
-    background-color: #FFB6C1 !important;
+    background-color: #8B4513 !important;
     border: 0px solid !important;
     transition: all 0.3s ease;
 }
 
 .search-button:hover {
-    background-color: #ff6f91 !important;
+    background-color: #A0522D !important;
 }
 
 .dropdown-item:hover {
-    background-color: #FF6F91 !important;
+    background-color: #A0522D !important;
     color: white !important;
     border-radius: 7px;
     transition: all 0.3s ease;
@@ -47,7 +45,7 @@
 }
 
 .nav-link:hover {
-    color: #FF6F91 !important;
+    color: #A0522D !important;
 }
 
 .promotion-dropdown {
@@ -103,7 +101,6 @@
     }
 }
 
-
 .promotion-dropdown-item {
     padding: 10px 15px !important;
     margin: 0 !important;
@@ -111,7 +108,7 @@
 }
 
 .promotion-dropdown-item:hover {
-    background-color: #FFB6C1 !important;
+    background-color: #8B4513 !important;
     color: white !important;
     transform: translateY(-2px);
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -124,7 +121,7 @@
 
 .dropdown-toggle:hover {
     border-radius: 7px !important;
-    background-color: #FFB6C1 !important;
+    background-color: #8B4513 !important;
     color: white !important;
 }
 
@@ -163,7 +160,7 @@
 }
 
 .icon_user .user-icon.logged-in {
-    color: #ff69b4;
+    color: #A0522D;
 }
 
 .icon_user .dropdown-toggle {
@@ -184,20 +181,19 @@
     margin-top: 8px;
 }
 
-
 @media (max-width: 992px) {
     .icon_user {
         top: 3px !important;
     }
+
     .notification-modal .icon-active svg {
-  color: #ff69b4;
-}
+        color: #A0522D;
+    }
 }
 
 @media (max-width: 350px) {
     .logo-text {
         opacity: 0 !important;
-
     }
 
     .logo-text {
@@ -207,30 +203,31 @@
         text-overflow: ellipsis;
         box-sizing: border-box;
         max-width: 100%;
-
     }
-        .notification-modal .icon-active svg {
-            color: #ff69b4;
-        }
+
+    .notification-modal .icon-active svg {
+        color: #A0522D;
+    }
 }
 
 @media (max-width: 200px) {
     .Logo_image {
         opacity: 0 !important;
-
     }
-        .notification-modal .icon-active svg {
-            color: #ff69b4;
-        }
+
+    .notification-modal .icon-active svg {
+        color: #A0522D;
+    }
 }
 
 @media screen and (min-width: 991px) {
     .desktop-hidden {
         display: none !important;
     }
-        .notification-modal .icon-active svg {
-            color: #ff69b4;
-        }
+
+    .notification-modal .icon-active svg {
+        color: #A0522D;
+    }
 }
 
 html body .nav-link {
@@ -332,7 +329,14 @@ html body .nav-link {
 .btn:first-child:active,
 :not(.btn-check)+.btn:active {
     color: var(--bs-btn-active-color);
-    background-color: #FF6F91!important;
-    border-color: #FF6F91!important;
+    background-color: #A0522D !important;
+    border-color: #A0522D !important;
 }
 
+/* logo */
+
+@media (min-width: 992px) {
+    .Logo_image {
+        margin-left: 70px;
+    }
+}
